[project]
name = "db-utils"
version = "0.1.0"
description = "Database utilities"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.27",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_utils"]