[project]
name = "utils"
version = "0.1.0"
description = "Utilities for database access with an optional FastAPI CRUD router"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.27",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv",
    "mysql-connector-python",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utils"]
